Fix: bottom line in legend is not visible

--- a/telemetryReaderForAndroid/www/css/style.css
+++ b/telemetryReaderForAndroid/www/css/style.css
@@ -6,8 +6,8 @@
 .grid-container {
   width: 100%;
   height: 100%;
-  padding: 20px;
-  padding-bottom: 100px;
+  padding: 10px;
+  padding-bottom: 120px;
 }
 
 .grid-container figure {
